src/partials/elements/_segment.sass
@import ../../variables/elements/segment.variables

//*******************************//
//            Variations
//*******************************//

@mixin segment-variant($borderColor)
    border-top-color: $borderColor

@mixin segment-inverted-variant($color, $backgroundColor, $borderColor)
    color           : $color
    background-color: $backgroundColor
    border-color    : $borderColor

//*******************************//
//              Main
//*******************************//

.ts.segment
    position        : relative
    display         : block
    padding         : $segment_padding
    margin          : $segment_margin
    border          : $segment_border
    background-color: $segment_backgroundColor
    border-radius   : $segment_borderRadius
    box-shadow      : $segment_boxShadow
    color           : $textColor
    word-wrap       : break-word

    +segment-variant($borderColor)

.ts.segment:first-child
    margin-top: 0
.ts.segment:last-child
    margin-bottom: 0

//-------------------//
//      Insetted
//-------------------//

.ts.insetted.segment
    box-shadow: $segment_boxShadow inset

//-------------------//
//       Raised
//-------------------//

.ts.segment.raised,
.ts.segments.raised
    box-shadow: $segment_raisedBoxShadow

.ts.segments.raised > .segment
    box-shadow: none

//-------------------//
//      Accents
//-------------------//

.ts.segment.secondary,
.ts.segments.secondary > .segment
    background-color: $segment_secondaryBackgroundColor
    color           : $segment_secondaryColor

.ts.segment.tertiary,
.ts.segments.tertiary > .segment
    background-color: $segment_tertiaryBackgroundColor
    color           : $segment_tertiaryColor

//-------------------//
//      Flatted
//-------------------//

.ts.segment.flatted,
.ts.segments.flatted > .segment
    box-shadow: none

//-------------------//
//     Borderless
//-------------------//

.ts.segment.borderless,
.ts.segments.borderless > .segment
    border: 0

//-------------------//
//      Floated
//-------------------//

.ts.segment.floated,
.ts.segment[class*="left floated"]
    float       : left
    margin-right: $segment_floatedDistance

.ts.segment[class*="right floated"]
    float       : right
    margin-left: $segment_floatedDistance

//-------------------//
//      Loading
//-------------------//

.ts.loading.segment
    position      : relative
    cursor        : default
    pointer-events: none
    text-shadow   : none !important
    color         : transparent !important
    transition    : all 0s linear
    //border-color  : transparent

.ts.loading.segment:before
    position     : absolute
    content      : ''
    top          : 0
    left         : 0
    bottom       : 0
    right        : 0
    background   : $segment_loaderDimmerColor
    //width        : calc(100% + #{$segment_borderWidth * 2})
    //height       : calc(100% + #{$segment_coloredTopBorderWidth + $segment_borderWidth})
    border-radius: $segment_borderRadius
    z-index      : $z_segment_loaderDimmer

.ts.loading.segment.inverted:before
    top   : -#{$segment_borderWidth}
    height: calc(100% + #{$segment_borderWidth * 2})

.ts.loading.segment:after
    position: absolute
    content : ''
    top     : 50%
    left    : 50%
    //margin  : $loaderMargin
    margin  : -#{$segment_loaderSize / 2 + $loaderLineWidth} 0 0 -#{$segment_loaderSize / 2 + $loaderLineWidth}
    width   : $segment_loaderSize
    height  : $segment_loaderSize

    animation: segment-spin $loaderSpeed linear
    animation-iteration-count: infinite

    border-radius: $circularRadius
    border-color : $loaderLineColor $loaderFillColor $loaderFillColor $loaderFillColor
    border-style : solid
    border-width : $loaderLineWidth
    box-shadow   : 0px 0px 0px 1px transparent
    visibility   : visible
    z-index      : $z_segment_loaderLine

@keyframes segment-spin
    from
        transform: rotate(0deg)
    to
        transform: rotate(360deg)

//-------------------//
//      Emphasis
//-------------------//

.ts.segment.primary:not(.inverted),
.ts.segments.primary:not(.inverted) .segment
    +segment-variant($segment_primaryBorderColor)
    border-top-width: $segment_coloredTopBorderWidth
.ts.segment.info:not(.inverted),
.ts.segments.info:not(.inverted) .segment
    +segment-variant($segment_infoBorderColor)
    border-top-width: $segment_coloredTopBorderWidth
.ts.segment.warning:not(.inverted),
.ts.segments.warning:not(.inverted) .segment
    +segment-variant($segment_warningBorderColor)
    border-top-width: $segment_coloredTopBorderWidth
.ts.segment.positive:not(.inverted),
.ts.segments.positive:not(.inverted) .segment
    +segment-variant($segment_positiveBorderColor)
    border-top-width: $segment_coloredTopBorderWidth
.ts.segment.negative:not(.inverted),
.ts.segments.negative:not(.inverted) .segment
    +segment-variant($segment_negativeBorderColor)
    border-top-width: $segment_coloredTopBorderWidth

//-------------------//
//  Inverted Emphasis
//-------------------//

.ts.segment.inverted.primary,
.ts.segments.inverted.primary .segment
    +segment-inverted-variant($segment_primaryTextColor, $segment_primaryBackgroundColor, $segment_primaryBorderColor)
.ts.segment.inverted.info,
.ts.segments.inverted.info .segment
    +segment-inverted-variant($segment_infoTextColor, $segment_infoBackgroundColor, $segment_infoBorderColor)
.ts.segment.inverted.warning,
.ts.segments.inverted.warning .segment
    +segment-inverted-variant($segment_warningTextColor, $segment_warningBackgroundColor, $segment_warningBorderColor)
.ts.segment.inverted.positive,
.ts.segments.inverted.positive .segment
    +segment-inverted-variant($segment_positiveTextColor, $segment_positiveBackgroundColor, $segment_positiveBorderColor)
.ts.segment.inverted.negative,
.ts.segments.inverted.negative .segment
    +segment-inverted-variant($segment_negativeTextColor, $segment_negativeBackgroundColor, $segment_negativeBorderColor)
.ts.segment.inverted,
.ts.segments.inverted .segment
    +segment-inverted-variant($segment_invertedTextColor, $segment_invertedBackgroundColor, $segment_invertedBorderColor)

//-------------------//
//       Padded
//-------------------//

.ts.segment.padded,
.ts.segments.padded .segment
    padding: $segment_paddedPadding

.ts.segment.very.padded,
.ts.segments.very.padded .segment
    padding: $segment_veryPaddedPadding

//-------------------//
//      Clearing
//-------------------//

.ts.segment.clearing:after
    display   : block
    content   : "\00a0"
    height    : 0
    clear     : both
    visibility: hidden

//-------------------//
//       Fitted
//-------------------//

.ts.segment.fitted:not(.horizontally):not(.vertically)
    padding: 0
.ts.segment.fitted.horizontally
    padding-left : 0
    padding-right: 0
.ts.segment.fitted.vertically
    padding-top   : 0
    padding-bottom: 0

//-------------------//
//       Basic
//-------------------//

.ts.segment.basic
    border       : none
    box-shadow   : none
    background   : none
    border-radius: none

//-------------------//
//      Disabled
//-------------------//

.ts.segment.disabled
    opacity: $disabledOpacity
    color  : $disabledTextColor

//-------------------//
//       Aligns
//-------------------//

.ts.segment[class*='center aligned'],
.ts.segments[class*='center aligned'] .segment
    text-align: center
.ts.segment[class*='left aligned'],
.ts.segments[class*='left aligned'] .segment
    text-align: left
.ts.segment[class*='right aligned'],
.ts.segments[class*='right aligned'] .segment
    text-align: right

.ts.segment.centered
    margin: 0 auto

//-------------------//
//       Fluid
//-------------------//

.ts.segment.fluid
    border-radius: 0
    border       : none

//-------------------//
//      Compact
//-------------------//

.ts.segments.compact .segment,
.ts.segment.compact
    display: table

//-------------------//
//      Attached
//-------------------//

.ts.attached.segment
    box-shadow: $segment_topAttachedBoxShadow

.ts.segment[class*="top attached"]
    +extend(top-attached)

.ts.segment.attached:not([class*="top attached"]):not([class*="bottom attached"])
    +extend(attached)

.ts.segment[class*="bottom attached"]
    +extend(bottom-attached)

    box-shadow: $segment_bottomAttachedBoxShadow

//*******************************//
//            Segments
//*******************************//

.ts.segments
    border-radius: $segment_borderRadius
    font-size    : 0

    > .segment
        font-size: $fontSize

    &:not(.horizontal)
        > .segment
            &:first-child:not(:last-child):not(:only-child)
                margin-bottom: 0
                border-bottom: none
                border-bottom-right-radius: 0
                border-bottom-left-radius : 0

            &:not(:last-child):not(:first-child):not(:only-child)
                margin-top   : 0
                margin-bottom: 0
                border-bottom: none
                border-top-right-radius   : 0
                border-top-left-radius    : 0
                border-bottom-right-radius: 0
                border-bottom-left-radius : 0

            &:last-child:not(:only-child)
                margin-top: 0
                border-top-right-radius: 0
                border-top-left-radius : 0


    &.horizontal
        display: flex
        margin-top   : $segment_verticalMargin
        margin-bottom: $segment_verticalMargin

        > .segment
            display: inline-block
            flex   : 1
            margin : 0

            &:first-child:not(:last-child)
                border-right               : none
                border-top-right-radius    : 0
                border-bottom-right-radius : 0

            &:not(:last-child):not(:first-child)
                border-right              : none
                border-top-right-radius   : 0
                border-top-left-radius    : 0
                border-bottom-right-radius: 0
                border-bottom-left-radius : 0

            &:last-child
                border-top-left-radius    : 0
                border-bottom-left-radius : 0

//-------------------//
//     Coupling
//-------------------//

.ts.attached.message + .ts.attached.segment
    border-top-width: $segment_borderWidth

